[taotao-cloud-project-1256] update dockerfile k8s add smart doc