@@ -22,6 +22,8 @@ import org.springframework.boot.SpringApplication;
 
 /**
  * TaoTaoCloudUcApplication
+ * 抑制java9 module 报错
+ * --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
  *
  * @author shuigedeng
  * @version 1.0.0
